Bumped Spring boot from 2.3.0 to 2.4.5
1. Added test classes for controller and service
2. Added global exception handler
3. Replaced swagger config to open api 3.0 spring doc