@@ -1,24 +1,22 @@
 package com.example.api.service;
 
+import com.example.api.domain.User;
+import org.springframework.stereotype.Service;
+
 import java.time.LocalDateTime;
 import java.time.ZonedDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
-
-import org.springframework.stereotype.Service;
-
-import com.example.api.model.User;
 
 @Service
 public class UserServiceImpl implements UserService {
 
     private Random random = new Random();
     private List<User> userList = new ArrayList<>(
-            Arrays.asList(new User[]{new User(1, "Adam", "1950-01-01"),
+            List.of(new User(1, "Adam", "1950-01-01"),
                     new User(2, "Bob", "1990-10-30"),
-                    new User(3, "Charlie", "1979-07-26")}));
+                    new User(3, "Charlie", "1979-07-26")));
 
     @Override
     public List<User> getAllUsers() {
@@ -28,16 +26,15 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public User getUserById(Long id) {
-        return userList.stream().filter(user -> user.getId() == id).map(user -> {
+        return userList.stream().filter(user -> user.getId().equals(id)).peek(user -> {
             user.setLastLogin(LocalDateTime.now());
             user.setZonedDateTime(ZonedDateTime.now());
-            return user;
         }).findAny().orElse(null);
     }
 
     @Override
     public Long createUser(User user) {
-        Long id = Long.valueOf(this.userList.size() + 1);
+        Long id = (long) (this.userList.size() + 1);
         user.setId(id);
         userList.add(user);
         return id;
@@ -46,7 +43,7 @@ public class UserServiceImpl implements UserService {
     @Override
     public void updateUser(Long id, User user) {
         userList.forEach(item -> {
-            if (item.getId() == id) {
+            if (item.getId().equals(id)) {
                 item.setName(user.getName());
                 item.setDateOfBirth(user.getDateOfBirth());
             }
@@ -55,7 +52,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public void deleteUserById(Long id) {
-        userList.removeIf(user -> user.getId() == id);
+        userList.removeIf(user -> user.getId().equals(id));
     }
 
 }
